mobile style changes

--- a/resources/style.css
+++ b/resources/style.css
@@ -242,11 +242,15 @@ article {
 @media screen and (max-width: 700px) {
 
     h1 {
-        font-size: 45px;
+        font-size: 35px;
     }
 
     h2 {
-        font-size: 30px;
+        font-size: 25px;
+    }
+	
+	h3 {
+        font-size: 25px;
     }
 
     article {
@@ -267,6 +271,11 @@ article {
 	
 	.grid a::after {
 		border:5px solid #e65f54;
+	}
+	
+	body {
+		padding-left:10px;
+		padding-right:10px;
 	}
 	
 	
