--- a/resources/style.css
+++ b/resources/style.css
@@ -44,7 +44,7 @@ body {
     padding: 50px 25px 25px 25px;
     margin:0;
     line-height: 2;
-	background-color: #2a2622;
+	background-color: #4a2a1e;
 	background-image:url('/resources/paper.png');
 	background-attachment: fixed;
 	overflow-x: hidden;
@@ -74,15 +74,15 @@ iframe {
 }
 
 a {
-	color: #e65f54;
-}
-
-a img {
-	vertical-align:top;
+	color: #ffed4d;
 }
 
 a:hover {
     color: #fee400;
+}
+
+a img {
+	vertical-align:top;
 }
 
 #navmobile {
@@ -146,7 +146,7 @@ nav {
 }
 
 nav, #navmobile {
-	box-shadow: inset 1px 2px 0 #FFFFFF30, inset -1px -2px 0 #00000050, 0px 10px 20px #00000050;
+	box-shadow: inset 1px 1px 0 #FFFFFF30, inset -1px -1px 0 #00000030, 0px 10px 20px #00000050;
 }
 
 nav a {
@@ -200,20 +200,27 @@ article {
 	margin:1%;
 	margin-top: -4%;
 	
-	background-color:#00000020;
-	box-shadow: inset 1px 2px 0 #FFFFFF10, inset -1px -2px 0 #00000030;
+
+/* 	background-color:#00000050; */
+/* 	box-shadow: inset 1px 2px 0 #FFFFFF10, inset -1px -2px 0 #00000030; */
 }
 
 .packedCircle:hover {
-	background-color:#FFFFFF;
-	box-shadow: 0px 0px 50px #fee400;
+/* 	background-color:#FFFFFF; */
+	box-shadow: 0px 0px 50px #ffad8f;
 }
 
 .packedCircle .thumbnail {
-	width:90%;
-	height:90%;
-	left:5%;
-	top:5%;
+/* 
+	width:98%;
+	height:98%;
+	left:1%;
+	top:1%;
+ */
+
+	width:100%;
+	height:100%;
+	
 	position:absolute;
 	border-radius:50%;
 	line-height: 90%;
@@ -225,8 +232,8 @@ article {
 	justify-content: center;
 	align-items: center;
 	text-align:center;
-	background-color: #00000090;
-	backdrop-filter: blur(5px);
+	background-color: #000000AA;
+	backdrop-filter: blur(2px);
 }
 
 .packedCircle:hover .thumbtext {
@@ -242,7 +249,7 @@ article {
 }
 
 #backgroundGlyph {
-	/*position:fixed;
+	position:fixed;
 	width:700px;
 	height:700px;
 	bottom:-80px;
@@ -251,9 +258,9 @@ article {
 	background-image:url('/resources/dog cropped.svg');
 	background-position: left bottom;
 	background-repeat: no-repeat;
-	z-index:-100;*/
+	z-index:-100;
 	
-	display:none;
+/* 	display:none; */
 }
 
 @media screen and (max-width: 700px) {
