--- a/resources/style.css
+++ b/resources/style.css
@@ -44,7 +44,7 @@ body {
     padding: 50px 25px 25px 25px;
     margin:0;
     line-height: 2;
-	background-color: #4a2a1e;
+	background-color: #3a2216;
 	background-image:url('/resources/paper.png');
 	background-attachment: fixed;
 	overflow-x: hidden;
@@ -145,8 +145,8 @@ nav {
     border-radius: 100px 100px 10px 10px;
 }
 
-nav, #navmobile {
-	box-shadow: inset 1px 1px 0 #FFFFFF30, inset -1px -1px 0 #00000030, 0px 10px 20px #00000050;
+nav, #navmobile, .packedCircle {
+	box-shadow: 0px 10px 20px #00000050;
 }
 
 nav a {
@@ -200,24 +200,14 @@ article {
 	margin:1%;
 	margin-top: -4%;
 	
-
-/* 	background-color:#00000050; */
-/* 	box-shadow: inset 1px 2px 0 #FFFFFF10, inset -1px -2px 0 #00000030; */
+	background-color: #00000050;
 }
 
 .packedCircle:hover {
-/* 	background-color:#FFFFFF; */
 	box-shadow: 0px 0px 50px #ffad8f;
 }
 
 .packedCircle .thumbnail {
-/* 
-	width:98%;
-	height:98%;
-	left:1%;
-	top:1%;
- */
-
 	width:100%;
 	height:100%;
 	
@@ -259,8 +249,6 @@ article {
 	background-position: left bottom;
 	background-repeat: no-repeat;
 	z-index:-100;
-	
-/* 	display:none; */
 }
 
 @media screen and (max-width: 700px) {
