--- a/resources/style.css
+++ b/resources/style.css
@@ -11,6 +11,7 @@
 html {
     margin: 0 auto;
 	max-width: 1000px;
+	font-size:1.2em;
 }
 
 h1, h2, h3 {
@@ -19,19 +20,19 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 60px;
-    line-height: 1.2;
+    font-size: 3em;
+    line-height:1.2em;
 }
 
 h2 {
-    font-size: 45px;
+    font-size: 2em;
 	margin-top:75px;
 	margin-bottom:20px;
 }
 
 h3 {
     font-family: body, serif;
-    font-size: 30px;
+    font-size: 1.5em;
 }
 
 body, h3 {
@@ -39,19 +40,19 @@ body, h3 {
 }
 
 body {
-    font-size: 20px;
     color: #FFFFFF;
-    padding: 50px 25px 25px 25px;
+    padding: 65px 25px 25px 25px;
     margin:0;
-    line-height: 2;
+    line-height: 2em;
 	background-color: #3a2216;
-	background-image:url('/resources/paper.png');
-	background-attachment: fixed;
+/* 	background-image:url('/resources/paper.png'); */
+/* 	background-attachment: fixed; */
 	overflow-x: hidden;
 }
 
-article > img, article > a > img, article > .webvid {
+main img, main .webvid {
     width: 100%;
+    margin: 1em 0;
 }
 
 .webvid {
@@ -145,9 +146,11 @@ nav {
     border-radius: 100px 100px 10px 10px;
 }
 
+/* 
 nav, #navmobile, .packedCircle {
 	box-shadow: 0px 10px 20px #00000050;
 }
+ */
 
 nav a {
     color: #ffffff;
@@ -166,7 +169,7 @@ nav li {
 	line-height:1em;
 }
 
-article {
+main {
     margin-left: 175px;
 }
 
@@ -181,8 +184,6 @@ article {
 	padding:0;
 	margin:-75px -50px;
 	padding:100px 50px;
-    /* width: 100%; */
-	/* margin: 0 auto; */
 	overflow: auto;
 }
 
@@ -216,22 +217,31 @@ article {
 	line-height: 90%;
 }
 
-.packedCircle .thumbtext {
-	font-family:title;
-	display: none;
-	justify-content: center;
-	align-items: center;
+.packedCircle:hover .thumbnail {
+	filter: blur(5px) brightness(0.4);
+}
+
+.thumbtext {
+	display:none;
+
+	padding:auto;
+	position:absolute;
 	text-align:center;
-	background-color: #000000AA;
-	backdrop-filter: blur(2px);
+	top:50%;
+    left:50%;
+    transform:translateX(-50%) translateY(-50%);
+	width: 70%;
+	line-height:1.2em;
+	font-family:title;
 }
 
 .packedCircle:hover .thumbtext {
-	display: flex;
+	display:block;
 }
 
+
 .circlesPacked a:nth-child(4n+3) {
-	margin-left: 20.5%;
+	margin-left:20.5%;
 }
 
 .circlesPacked a:nth-child(4n+5) {
@@ -261,11 +271,11 @@ article {
         font-size: 25px;
     }
 	
-	article {
+	main {
 		margin-left:0;
 	}
 	
-	article p, h1, h2, h3 {
+	main p, h1, h2, h3 {
 		padding:0 10px 0 10px;
 	}
 
