--- a/resources/style.css
+++ b/resources/style.css
@@ -154,7 +154,6 @@ nav, #navmobile, .packedCircle {
 
 nav a {
     color: #ffffff;
-	text-decoration: none;
 }
 
 nav ul {
@@ -201,12 +200,11 @@ main {
 	display: inline;
 	margin:1%;
 	margin-top: -4%;
-	
-	background-color: #00000050;
 }
 
 .packedCircle:hover {
-	box-shadow: 0px 0px 50px #ffad8f;
+	/* box-shadow: 0px 0px 50px #ffad8f; */
+	background-color: #fee400;
 }
 
 .packedCircle .thumbnail {
@@ -219,8 +217,21 @@ main {
 }
 
 .packedCircle:hover .thumbnail {
-	filter: blur(5px) brightness(0.4);
+	filter: grayscale(100%) contrast(1);
+	mix-blend-mode: multiply;
 }
+
+.packedCircle:hover::after {
+	display: block;
+	content:'';
+	background-color: #e65f54;
+	mix-blend-mode: lighten;
+	
+	position:absolute;
+	width:100%;
+	height:100%;
+}
+
 
 .thumbtext {
 	display:none;
@@ -234,6 +245,8 @@ main {
 	width: 70%;
 	line-height:1.2em;
 	font-family:title;
+	color:white;
+	text-decoration:underline;
 }
 
 .packedCircle:hover .thumbtext {
