--- a/resources/style.css
+++ b/resources/style.css
@@ -170,7 +170,7 @@ nav a {
 nav ul {
     margin: 0;
     line-height: 1.2em;
-    padding: 0 15px;
+    padding: 0 20px;
     list-style-type: none;
 }
 
@@ -285,6 +285,10 @@ main {
 	*/
 	
 	display:none;
+}
+
+nav {
+	text-align:right;
 }
 
 @media screen and (max-width: 700px) {
